Fix spacing between elements on landing page and interior - specificially alter the top padding on the body globally

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -29,7 +29,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 80px;
   margin-bottom: 75px;
 }
 
